--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     	<img id="logo" src="resources/images/img-tea-cozy-logo.png">
         <nav>
         	<ul>
-            	<li><a href="mission">Mission</a></li>
-                <li><a href="feature">Featured Tea</a></li>
-                <li><a href="locations">Locations</a></li>
+            	<li><a href="#mission">Mission</a></li>
+                <li><a href="#feature">Featured Tea</a></li>
+                <li><a href="#locations">Locations</a></li>
             </ul>
         </nav>
     </header>
@@ -80,10 +80,14 @@
     </main>
     
     <footer>
-    	<h1>The Tea Cozy</h1>
-        <p>contact@theteacozy.com</p>
-        <p>917-555-8904</p>
-        <p id="copyright">copyright The Tea Cozy 2017</p>
+    	<div id="contact">
+            <h2>The Tea Cozy</h2>
+            <h5><a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
+            <h5><a href="tel:+01-917-555-8904">917-555-8904</a></h5>
+        </div>
+        <div id="copyright">
+        	<h5>copyright The Tea Cozy 2017</h5>
+        </div>
     </footer>
 
 </body>
