Added alt text, condensed CSS and added more semantic HTML tags

--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
             <h4>What's Steeping at The Tea Cozy?</h4>
             <div id="teaimg">
                 <div class="flavor">
-                    <img class="flavorimg" src="resources/images/img-berryblitz.jpeg">
+                    <img class="flavorimg" src="resources/images/img-berryblitz.jpeg" alt="grey cup with tea and fall berries">
                     <h4>Fall Berry Blitz Tea</h4>
                 </div>
                 <div class="flavor">
-                    <img class="flavorimg" src="resources/images/img-spiced-rum.jpeg">
+                    <img class="flavorimg" src="resources/images/img-spiced-rum.jpeg" alt="box of loose tea leaves with inscription it pays to buy good tea">
                     <h4>Spiced Rum Tea</h4>
                 </div>
                 <div class="flavor">
-                    <img class="flavorimg" src="resources/images/img-donut.jpeg">
+                    <img class="flavorimg" src="resources/images/img-donut.jpeg" alt="freshly baked donut on a plate">
                     <h4>Seasonal Donuts</h4>
                 </div>
                 <div class="flavor">
-                    <img class="flavorimg" src="resources/images/img-myrtle-ave.jpeg">
+                    <img class="flavorimg" src="resources/images/img-myrtle-ave.jpeg" alt="cup of tea behind a curtain">
                     <h4>Myrtle Ave Tea</h4>
                 </div>
                 <div class="flavor">
-                    <img class="flavorimg" src="resources/images/img-bedford-bizarre.jpeg">
+                    <img class="flavorimg" src="resources/images/img-bedford-bizarre.jpeg" alt="cup of tea with sugar and a small piece of cake">
                     <h4>Bedford Bizarre Tea</h4>
                 </div>
             </div>
@@ -59,21 +59,27 @@
             <div id="loclist">
                 <div class="address">
                     <h3>Downtown</h3>
-                    <p>384 West 4th St</p>
-                    <p>Suite 108</p>
-                    <p>Portland, Maine</p>
+                    <address>
+                        <p>384 West 4th St</p>
+                        <p>Suite 108</p>
+                        <p>Portland, Maine</p>
+                    </address>
                 </div>
                 <div class="address">
                     <h3>East Bayside</h3>
-                    <p>3433 Phisherman's Avenue</p>
-                    <p>(Northwest Corner)</p>
-                    <p>Portland, Maine</p>
+                    <address>
+                        <p>3433 Phisherman's Avenue</p>
+                        <p>(Northwest Corner)</p>
+                        <p>Portland, Maine</p>
+                    </address>
                 </div>
                 <div class="address">
                     <h3>Oakdale</h3>
-                    <p>515 Crescent Avenue</p>
-                    <p>Second Floor</p>
-                    <p>Portland, Maine</p>
+                    <address>
+                        <p>515 Crescent Avenue</p>
+                        <p>Second Floor</p>
+                        <p>Portland, Maine</p>
+                    </address>
                 </div>
             </div>
         </div>
@@ -82,8 +88,10 @@
     <footer>
     	<div id="contact">
             <h2>The Tea Cozy</h2>
-            <h5><a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
-            <h5><a href="tel:+01-917-555-8904">917-555-8904</a></h5>
+            <address>
+                <h5><a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
+                <h5><a href="tel:+01-917-555-8904">917-555-8904</a></h5>
+            </address>
         </div>
         <div id="copyright">
         	<h5>copyright The Tea Cozy 2017</h5>
